# MCPcat

./: README.md  pyproject.toml
mcpcat/: __init__.py  cli.py  client.py
mcprobe/: __init__.py  cli.py  client.py
