[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcpcat"
version = "0.1.0"
description = "MCP Server Inspector CLI — connect, explore, and test any MCP server from your terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Alex LaGuardia", email = "alex@guardiacontent.com" },
]
keywords = ["mcp", "model-context-protocol", "cli", "inspector", "debugging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Debugging",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "rich>=13.0.0",
]

[project.scripts]
mcpcat = "mcpcat.cli:app"

[project.urls]
Homepage = "https://github.com/AlexlaGuardia/mcpcat"
Repository = "https://github.com/AlexlaGuardia/mcpcat"
Issues = "https://github.com/AlexlaGuardia/mcpcat/issues"
