[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcprobe"
version = "0.1.0"
description = "Probe any MCP server from your terminal. List tools, inspect schemas, call endpoints."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Alex LaGuardia", email = "alex@guardiacontent.com" },
]
keywords = ["mcp", "model-context-protocol", "cli", "inspector", "debugging", "probe"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "rich>=13.0.0",
]

[project.scripts]
mcprobe = "mcprobe.cli:app"

[project.urls]
Homepage = "https://github.com/AlexlaGuardia/mcprobe"
Repository = "https://github.com/AlexlaGuardia/mcprobe"
Issues = "https://github.com/AlexlaGuardia/mcprobe/issues"
